tests/errors/try_catch_type_mismatch.dang
# try body returns Int! but catch returns String! — type mismatch
pub result = try {
  42
} catch { err =>
  "not a number"
}
